force-app/main/default/objects/Ecommerce_Product__c/Ecommerce_Product__c.object-meta.xml
<CustomObject>
    <description>Ecommerce product records</description>
    <label>Ecommerce Product</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ecommerce Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>