force-app/main/default/objects/Ecommerce_Product__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>